--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "myfirstreact",
-    "homepage": "https://github.com/kaaatg/myfirstreact.git",
+    "homepage": "https://kaaatg.github.io/myfirstreact",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
