--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
     "name": "myfirstreact",
     "homepage": "https://kaaatg.github.io/myfirstreact/",
     "version": "0.1.0",
@@ -11,6 +11,7 @@
         "bootstrap": "^5.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^6.0.2",
         "react-scripts": "4.0.3",
         "react-typewriter-effect": "^1.1.0",
         "typewriter-effect": "^2.18.2",
