--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
             "last 1 chrome version",
             "last 1 firefox version",
             "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
+        ],
+        "engines": {
+            "node": "16.9.1"
+        },
+        "devDependencies": {
         "gh-pages": "^3.2.3"
     }
 }
